# embench-iot

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  Sconstruct.py  aclocal.m4  baseline-size.json  benchmark-size.py  benchmark-speed.py  benchmark_size.py  benchmark_speed.py  build-all.py  build_all.py  config.h.in  configure  configure.ac  embench_core.py  ltmain.sh  mac-instructions-to-be-included-in-documentation-at-some-point.txt  run_all.py  sconstruct.py
baseline-data/: size.json  speed.json
config/: default.exp
config/arc/: arch.cfg
config/arc/boards/generic/: boardsupport.c
config/arc/chips/em/: chip.cfg  chipsupport.c  chipsupport.h
config/arc/chips/size-test-llvm/: chip.cfg
config/arm/: arch.cfg
config/arm/boards/generic/: board.cfg  boardsupport.h
config/arm/boards/stm32f4-discovery/: STM32F407XG.ld  board.cfg  boardsupport.c  startup_stm32f407xx.S
config/arm/boards/stm32l4-discovery-staticlib/: board.cfg  boardsupport.h
config/arm/chips/cortex-m4/: chip.cfg
config/arm/chips/size-test-gcc/: chip.cfg  chipsupport.h
config/arm/chips/size-test-llvm/: chip.cfg  chipsupport.c
config/arm32/: arch.cfg
config/arm32/boards/stm32f4-discovery/: board.cfg  boardsupport.c  stm32f4-discovery.ld
config/arm32/chips/size-test-gcc/: chip.cfg
config/arm32/chips/speed-test/: chip.cfg
config/avr/boards/generic/: boardsupport.h
config/avr/chips/atmega64/: chipsupport.c  chipsupport.h
config/linux/boards/default/: board.cfg
config/linux/chips/size-test-gcc/: chip.cfg
config/linux/chips/size-test-ubuntu-gcc/: chip.cfg
config/mac/: README.md  arch.cfg
config/mac/boards/generic/: boardsupport.c  boardsupport.h
config/mac/boards/size/: boardsupport.c
config/mac/chips/generic/: chip.cfg
config/mac/chips/size-test-clang/: chip.cfg
config/mac/chips/size-test-clang-ARM-M1/: chip.cfg
config/mac/chips/size-test-clang-X86-64/: chip.cfg
config/mac/chips/speed-test-clang-ARM-M1/: chip.cfg  chipsupport.h
config/mac/chips/speed-test-clang-X86-64/: chip.cfg
config/native/boards/default/: board.cfg
config/native/chips/: default
config/native/chips/debug-gcc/: chip.cfg  chipsupport.c
config/native/chips/size-test-gcc/: chip.cfg  chipsupport.c
config/native/chips/size-test-ubuntu-gcc/: chip.cfg
config/native/chips/speed-test-gcc/: chip.cfg
config/riscv32/: arch.cfg
config/riscv32/boards/freedom-e310-arty/: README.md  board.cfg  boardsupport.c  boardsupport.h
config/riscv32/boards/ri5cyverilator/: board.cfg  boardsupport.c  boardsupport.h
config/wasm/: README.md  arch.cfg
config2/: SConscript.py  boardsupport.c  config.py
doc/: Makefile  Makefile.am  Makefile.in  README.adoc  README.md  custom.wordlist  gentoc.sh
examples/arc/em/: README.md  boardsupport.h
examples/arm/staticlib/: README.md  boardsupport.c  boardsupport.h
examples/arm/stm32f4-discovery/: .gitignore  Makefile  README.md  STM32F407IGHX_FLASH.ld  STM32F407XG.ld  boardsupport.h  gcc_arm.ld  startup_stm32f407xx.S  startup_stm32f407xx.s  system_stm32f4xx.c
examples/avr/: arch.cfg
examples/avr/atmega64/: README.md  boardsupport.c  boardsupport.h
examples/mac/size-M1/: README.md  boardsupport.h
examples/mac/size-X86-64/: README.md
examples/mac/speed-M1/: README.md  boardsupport.c
examples/mac/speed-X86-64/: README.md
examples/native/: arch.cfg
examples/native/default/: SConscript.py  boardsupport.h
examples/native/size/: README.md
examples/native/speed/: README.md  boardsupport.h
examples/or1k/: README.md  boardsupport.c  boardsupport.h
examples/riscv32/cv32e40pv2fpga/: README.md  boardsupport.c  boardsupport.h  link.ld  openocd-nexys-hs2.cfg  unilink.ld
examples/riscv32/ri5cyverilator/: README.md  boardsupport.c
examples/riscv32/rv32wallyverilog/: README.md  SConscript.py  boardsupport.c  boardsupport.h  config.py  link.ld
examples/wasm32/size/: README.md  boardsupport.c  boardsupport.h
pylib/: embench_core.py  run-gdbserver-sim.py  run_freedom-e310-arty.py  run_gdbserver_sim.py  run_mac.py  run_native.py  run_simulator.py  run_spike.py  run_stm32f4-discovery.py  run_wally.py
src/: Makefile.am  Makefile.in  common.mk.am
src/aha-mont64/: Makefile.am  Makefile.in  mont64.c
src/crc32/: Makefile.am  Makefile.in  crc_32.c
src/cubic/: Makefile.am  Makefile.in  basicmath_small.c  libcubic.c  snipmath.h
src/depthconv/: depthconv.c
src/edn/: Makefile.am  Makefile.in  libedn.c
src/huffbench/: Makefile.am  Makefile.in  libhuffbench.c
src/matmult-int/: Makefile.am  Makefile.in  matmult-int.c
src/md5sum/: md5.c
src/minver/: Makefile.am  Makefile.in  libminver.c
src/mnist-densenet/: main.c  sconscript.py  weights.h
src/mnist-densenet/port/: nnom_port.h
src/nbody/: Makefile.am  Makefile.in  nbody.c
src/nettle-aes/: Makefile.am  Makefile.in  nettle-aes.c
src/nettle-sha256/: Makefile.am  Makefile.in  nettle-sha256.c
src/nsichneu/: Makefile.am  Makefile.in  libnsichneu.c
src/picojpeg/: Makefile.am  Makefile.in  libpicojpeg.c  picojpeg_test.c
src/primecount/: primecount.c
src/qrduino/: Makefile.am  Makefile.in  qrframe.c  qrtest.c
src/sglib-combined/: Makefile.am  Makefile.in  combined.c  sglib.h
src/slre/: Makefile.am  Makefile.in  libslre.c
src/st/: Makefile.am  Makefile.in  libst.c
src/statemate/: Makefile.am  Makefile.in  libstatemate.c
src/sudoku_search/: sudoku_search.c  sudoku_search.h
src/tarfind/: tarfind.c
src/ud/: Makefile.am  Makefile.in  libud.c
src/wikisort/: Makefile.am  Makefile.in  libwikisort.c
src/xgboost/: testbench.c  xgboost.c  xgboost.h
support/: Makefile.am  Makefile.in  beebsc.c  beebsc.h  board.c  chip.c  dummy-crt0.c  dummy-libc.c  dummy-libgcc.c  dummy-libm.c  main.c  support.h
support/dummy-benchmark/: dummy.c
testsuite/: ChangeLog  Makefile.am  Makefile.in  beebs-conf.exp
testsuite/beebs.test/: Makefile.am  Makefile.in  execute.exp  size.exp
testsuite/config/: Makefile.am  Makefile.in  generic.exp  none.exp  ri5cyverilator.exp
testsuite/lib/: Makefile.am  Makefile.in  beebs.exp  mageec-wand.exp  perf-stat.exp
(+76 files in other folders)
