# Makefile.am for BEEBS benchmark source tree
#
# Copyright (C) 2018 Embecosm Limited
#
# Contributor: Jeremy Bennett <jeremy.bennett@embecosm.com>
#
# This file is part of Embench and was formerly part of the Bristol/Embecosm
# Embedded Benchmark Suite.

#
# SPDX-License-Identifier: GPL-3.0-or-later

SUBDIRS = aha-mont64            \
          crc32                 \
          cubic                 \
          edn                   \
          huffbench             \
          matmult-int           \
          minver                \
          nbody                 \
          nettle-aes            \
          nettle-sha256         \
          nsichneu              \
          picojpeg              \
          qrduino               \
          sglib-combined        \
          slre                  \
          st                    \
          statemate             \
          ud                    \
          wikisort

EXTRA_DIST = common.mk.am
